--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 USERNAME=""
 PASSWORD=""
-RESULT_BASE_PATH="results"
-RESULT_IMAGE_BASE_PATH="results/images"
+RESULT_BASE_PATH="generate"
+RESULT_IMAGE_BASE_PATH="generate/images"
